tests/baselines/reference/templateStringInFunctionParameterTypeES6.errors.txt
templateStringInFunctionParameterTypeES6.ts(1,12): error TS1003: Identifier expected.


==== templateStringInFunctionParameterTypeES6.ts (1 errors) ====
    function f(`hello`);
               ~~~~~~~
!!! error TS1003: Identifier expected.
    function f(x: string);
    function f(x: string) {
        return x;
    }